--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="mask-icon" href="%PUBLIC_URL%/fail.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="The marketplace that fails less" />
@@ -12,9 +11,9 @@
 	  mtgfail_white@2x.png
 	  mtgfail_white@3x.png
 		-->
+    <link rel="icon" type="image/png" href="/mtg_fail-1@0.1x-8.png" />
     <link rel="apple-touch-icon" sizes="60x60" href="/mtgfail_white.png" />
     <link rel="apple-touch-icon" sizes="76x76" href="/mtgfail_white.png" />
-    <link rel="apple-touch-icon" sizes="120x120" />
     <link rel="apple-touch-icon" sizes="152x152" href="/mtgfail_white@3x.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/mtgfail_white@3x.png" />
     <!--
